testsuite/tests/grammar/invalid_error_node/test.out
== test_abstract/test.lkt ==
test.lkt:3:52: error: Error nodes cannot be abstract
3 | @abstract class BaseErrorDecl : FooNode implements ErrorNode {
  |                                                    ^^^^^^^^^


== test_derived/test.lkt ==
test.lkt:6:29: error: Error nodes cannot be synthetic
6 | @synthetic class ErrorDecl: BaseErrorDecl {
  |                             ^^^^^^^^^^^^^


== test_error_and_list/test.lkt ==
test.lkt:3:47: error: Error nodes cannot be lists
3 | class ErrorDecl : ASTList[Example] implements ErrorNode {
  |                                               ^^^^^^^^^


== test_error_and_token/test.lkt ==
test.lkt:3:38: error: Error nodes cannot be token nodes
3 | class ErrorDecl : FooNode implements ErrorNode, TokenNode {
  |                                      ^^^^^^^^^


== test_nonnull_field/test.lkt ==
test.lkt:4:18: error: Error nodes can only have null fields
4 |     @parse_field f: Example
  |                  ^^^^^^^^^^


== test_nonnull_inherited_field/test.lkt ==
test.lkt:7:1: error: Error nodes can only have null fields: BaseErrorDecl.f is not null
7 | class ErrorDecl : BaseErrorDecl implements ErrorNode {
  | ^


== test_synthetic/test.lkt ==
test.lkt:3:49: error: Error nodes cannot be synthetic
3 | @synthetic class ErrorDecl : FooNode implements ErrorNode {
  |                                                 ^^^^^^^^^


lkt_compile: Done
